mockup/css/main.css
/* Sets 100% width for filter controls and adds a margin to top and bottom. */
.filter-control {
  width: 100%;
  margin-bottom: 20px;
}

/* Sets default color to gray, changes the cursor to a pointer when hovering
   over filter removal button. */
.remove-filter {
  color: gray;
  cursor: pointer;
}

/* Changes the color of the filter removal button on hover to red. */
.remove-filter:hover {
  color: #990000 !important;
}

/* Disables mouse click events in Chrome and Firefox. */
.not-active {
  pointer-events: none;
}

/* Scrollable container for filters. */
#filter-container {
  height: 68vh;
  width: 100%;
  overflow: auto;
  overflow-x: hidden;
}

